--- a/anionwm-3/anion-3plus/README
+++ b/anionwm-3/anion-3plus/README
@@ -33,7 +33,7 @@ Building and installing
    
    YOU SHOULD NOT SKIP THIS STEP unless you know what you are doing. Ion
    will refuse to start if it can not find all the necessary uncorrupt
-   configuration files either in `$PREFIX/etc/ion3/` or in `~/.ion3/`.
+   configuration files either in `$PREFIX/etc/anion3/` or in `~/.anion3/`.
 
 6. How to best set up `startx` or whatever to start Ion instead of your
    current window manager depends on your system's setup. A good guess
@@ -78,7 +78,7 @@ Some optional installation steps
    
    If you can't or do not want to build a system-wide man page cache, run
    `crontab -e` as your normal user and replace `-mksyscache` with
-   `-mkusercache` above. The cache file will be `~/.ion3/mancache`.
+   `-mkusercache` above. The cache file will be `~/.anion3/mancache`.
    
    It may also be useful to run `ion-completeman` with the suitable
    `-mk*cache` argument once manually to build the initial cache.
@@ -93,7 +93,7 @@ Configuration
 -------------
 
 For help on modifying Ion's configuration files, PLEASE READ THE DOCUMENT
-"Configuring and extending Ion3 with Lua" available from the Ion web page,
+"Configuring and extending Anion3 with Lua" available from the Ion web page,
 listed at the top of this file.
 
 
