--- a/anionwm-3/anionwm-3/README
+++ b/anionwm-3/anionwm-3/README
@@ -1,13 +1,12 @@
 
-Ion
-===
+Anion
+=====
 
-Copyright (c) Tuomo Valkonen 1999-2009.
+Copyright (c) Sergej Pupykin 2010, Tuomo Valkonen 1999-2009.
 
 tuomov at iki.fi
 
 <http://iki.fi/tuomov/ion/>
-          
 
 Building and installing
 -----------------------
@@ -18,19 +17,26 @@ Building and installing
     * GNU make <http://www.gnu.org/software/make/>
     * Lua 5.1 <http://www.lua.org/>
     * gettext <http://www.gnu.org/software/gettext/>
+    * (for documentation)
+      texlive-bin, texlive-core and texlive-latexextra
+      <http://tug.org/texlive/>
+    * (for documentation)
+      rubber <http://www.pps.jussieu.fr/~beffara/soft/rubber>
+    * (for documentation)
+      latex2html <http://saftsack.fs.uni-bayreuth.de/~latex2ht/>
 
-2. Edit `system.mk` to suit your system. 
+2. Edit `system.mk` to suit your system.
 
 3. If you want to build some extra modules now or do not want to build
    some of the standard modules, edit `modulelist.mk`.
-   
+
 4. Run `make`. Note that `make` here refers to GNU make which is usually
-   named `gmake` on systems with some other implementation of make as 
+   named `gmake` on systems with some other implementation of make as
    default.
-   
-5. Run `make install`, as root if you set `$PREFIX` in `system.mk` to a 
+
+5. Run `make install`, as root if you set `$PREFIX` in `system.mk` to a
    directory that requires those privileges.
-   
+
    YOU SHOULD NOT SKIP THIS STEP unless you know what you are doing. Ion
    will refuse to start if it can not find all the necessary uncorrupt
    configuration files either in `$PREFIX/etc/anion3/` or in `~/.anion3/`.
@@ -39,10 +45,10 @@ Building and installing
    current window manager depends on your system's setup. A good guess
    is creating or modifying an executable shell script `.xsession` in your
    home directory to start Ion. This should usually (but not always) work
-   if you're using some X display/login manager. If `~/.xsession` does not 
-   help and you're not using a display manager, modifying `~/.xinitrc` or 
-   creating one based on your system's `xinitrc` (wherever that may be; 
-   use `locate`) may be what you need to do. Note that unlike `.xsession`, 
+   if you're using some X display/login manager. If `~/.xsession` does not
+   help and you're not using a display manager, modifying `~/.xinitrc` or
+   creating one based on your system's `xinitrc` (wherever that may be;
+   use `locate`) may be what you need to do. Note that unlike `.xsession`,
    a `.xinitrc` should usually do much more setup than simply start a few
    programs of your choice.
 
@@ -61,7 +67,7 @@ Some optional installation steps
    feature at this time or never, you may simply skip this step. If you want
    to use `run-mailcap`, it can be found from the following address, as a 
    source tarball as well:
-   
+
        <http://www.debian.org/Packages/unstable/net/mime-support.html>
 
 2. Ion supports caching known man-pages in a file for faster man-page
